--- a/qdrant-test/Cargo.toml
+++ b/qdrant-test/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.72"
-atomic_refcell = "0.1.10"
+anyhow = "1"
+atomic_refcell = "0.1"
 parking_lot = "0.12"
-qdrant_segment = { git = "https://github.com/qdrant/qdrant", package = "segment" }
-rand = "0.8.5"
+qdrant_segment = { git = "https://github.com/qdrant/qdrant", rev = "47a03091f1e096ef7a34f481b5e3bf56522c612c", package = "segment" }
+rand = "0.8"
 serde_json = "1"
-tempdir = "0.3.7"
-uuid = "1.4.1"
+tempdir = "0.3"
+uuid = "1"
